Feat command battlefield (#25)
* Added battlefield list and check commands.

* Completed battlefield command

* Fixed list commands (nw team list / nw battlefield list) displaying the wrong amount of pages

* Update version