@@ -1,12 +1,13 @@
-package fr.rosstail.nodewar.commands.subcommands.team.teamsubcommands;
+package fr.rosstail.nodewar.commands.subcommands.battlefield.battlefieldsubcommands;
 
+import fr.rosstail.nodewar.battlefield.Battlefield;
+import fr.rosstail.nodewar.battlefield.BattlefieldManager;
 import fr.rosstail.nodewar.commands.CommandManager;
-import fr.rosstail.nodewar.commands.subcommands.team.TeamSubCommand;
+import fr.rosstail.nodewar.commands.subcommands.battlefield.BattlefieldSubCommand;
 import fr.rosstail.nodewar.lang.AdaptMessage;
 import fr.rosstail.nodewar.lang.LangManager;
 import fr.rosstail.nodewar.lang.LangMessage;
 import fr.rosstail.nodewar.team.NwITeam;
-import fr.rosstail.nodewar.team.type.NwTeam;
 import fr.rosstail.nodewar.team.TeamManager;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -15,14 +16,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-public class TeamListCommand extends TeamSubCommand {
+public class BattlefieldListCommand extends BattlefieldSubCommand {
 
-    public TeamListCommand() {
+    public BattlefieldListCommand() {
         help = AdaptMessage.getAdaptMessage().adaptMessage(
                 LangManager.getMessage(LangMessage.COMMANDS_HELP_LINE)
-                        .replaceAll("\\[desc]", LangManager.getMessage(LangMessage.COMMANDS_TEAM_LIST_DESC))
+                        .replaceAll("\\[desc]", LangManager.getMessage(LangMessage.COMMANDS_BATTLEFIELD_LIST_DESC))
                         .replaceAll("\\[syntax]", getSyntax()));
-
     }
 
     @Override
@@ -32,12 +32,17 @@ public class TeamListCommand extends TeamSubCommand {
 
     @Override
     public String getDescription() {
-        return "Desc check nodewar team list";
+        return "List of battlefields";
     }
 
     @Override
     public String getSyntax() {
-        return "nodewar team list (page)";
+        return "nodewar battlefield list (page)";
+    }
+
+    @Override
+    public List<String> getSubCommandsArguments(Player sender, String[] args, String[] arguments) {
+        return List.of();
     }
 
     @Override
@@ -46,16 +51,12 @@ public class TeamListCommand extends TeamSubCommand {
     }
 
     @Override
-    public String getPermission() {
-        return "nodewar.command.team.list";
-    }
-
-    @Override
     public void perform(CommandSender sender, String[] args, String[] arguments) {
-        StringBuilder message = new StringBuilder(LangManager.getMessage(LangMessage.COMMANDS_TEAM_LIST_RESULT_HEADER));
+        StringBuilder message = new StringBuilder(LangManager.getMessage(LangMessage.COMMANDS_BATTLEFIELD_LIST_RESULT_HEADER));
         int page = 0;
-        Map<String, NwITeam> stringNwITeamMap = TeamManager.getManager().getStringTeamMap();
-        List<String> strList = TeamManager.getManager().getStringTeamMap().keySet().stream().sorted().collect(Collectors.toList());
+
+        List<Battlefield> battlefieldList = BattlefieldManager.getManager().getBattlefieldList();
+        List<String> strList = battlefieldList.stream().map(battlefield -> battlefield.getModel().getName()).toList();
         int size = strList.size();
         int maxPage = (int) Math.ceil((float) size / 10);
         if (!CommandManager.canLaunchCommand(sender, this)) {
@@ -73,18 +74,13 @@ public class TeamListCommand extends TeamSubCommand {
         if (size > 0) {
             for (int i = page * 10; i < Math.min(size, page * 10 + 10); i++) {
                 String s = strList.get(i);
-                NwITeam nwTeam = stringNwITeamMap.get(s);
-                message.append("\n").append(AdaptMessage.getAdaptMessage().adaptTeamMessage(LangManager.getMessage(LangMessage.COMMANDS_TEAM_LIST_RESULT_LINE), nwTeam));
+                Battlefield battlefield = battlefieldList.stream().filter(battlefield1 -> battlefield1.getModel().getName().equals(s)).findFirst().get();
+                message.append("\n").append(battlefield.adaptMessage(LangManager.getMessage(LangMessage.COMMANDS_BATTLEFIELD_LIST_RESULT_LINE)));
             }
             message.append("\nP." + (page + 1) + "/" + maxPage);
         } else {
             message.append("\n&rP.0/0");
         }
         sender.sendMessage(AdaptMessage.getAdaptMessage().adaptMessage(message.toString()));
-    }
-
-    @Override
-    public List<String> getSubCommandsArguments(Player sender, String[] args, String[] arguments) {
-        return null;
     }
 }
